Ajout de mes fichier de font

--- a/FirstProject/index.html
+++ b/FirstProject/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Projet | OpenClassroom</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="themify-icons/themify-icons.css">
 </head>
 <body>
 	<div class="contenu-principal">
@@ -30,7 +31,7 @@
 			<img src="images/sanfrancisco.jpg">
 			<div>
 				<p>Retour sur mes vacances aux Etats-Unis...</p>
-				<a href="#">Voir l'article<i class="ti-angle-right"></i></a>
+				<a href="#">Voir l'article<i class="fa fa-caret-right"></i></a>
 			</div>
 		</div>
 	</div>
