--- a/FirstProject/index.html
+++ b/FirstProject/index.html
@@ -5,6 +5,7 @@
 	<title>Projet | OpenClassroom</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="themify-icons/themify-icons.css">
+	<link rel="stylesheet" type="text/css" href="css/all.css">
 </head>
 <body>
 	<div class="contenu-principal">
@@ -34,6 +35,98 @@
 				<a href="#">Voir l'article<i class="fa fa-caret-right"></i></a>
 			</div>
 		</div>
+
+		<section>
+			<aside>
+				<p>
+					<img src="images/ico_epingle.png">
+					<h2>Je suis un grand voyageur</h2>
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+			</aside>
+			<aside>
+				<img src="images/bulle.png">
+				<div class="desc-auteur">
+					<img src="images/zozor_classe.png">
+					<p>Laisse moi le temps de me présenter: je m'appelle Zozor. Je suis né un 23 Novembre 2003.</p>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco.
+					</p>
+				</div>
+				<div class="reseaux-socials">
+					<img src="images/facebook.png">
+					<img src="images/twitter.png">
+					<img src="images/vimeo.png">
+					<img src="images/flickr.png">
+					<img src="images/rss.png">
+				</div>
+			</aside>
+		</section>
+
+		<!-- séparteur -->
+		<div class="separateur"></div>
+
+		<!-- Mon footer -->
+		<footer>
+			<img src="images/ico_top.png">
+			<div class="content">
+				<div class="history">
+					<h4>Mon dernier tweet</h4>
+					<p>Salut blalalalala</p>
+					<p>le 12 mai à 22h 12</p>
+				</div>
+				<div class="photo">
+					<img src="images/photo1.jpg">
+					<img src="images/photo2.jpg">
+					<img src="images/photo3.jpg">
+					<img src="images/photo4.jpg">
+				</div>
+				<div class="amis">
+					<h4>Mes amis</h4>
+					<div class="left">
+						<ul>
+							<li>Pupi le lapin</li>
+							<li>Mr Baobab</li>
+							<li>Kaiwii</li>
+							<li>Perceval.eu</li>
+						</ul>
+					</div>
+					<div>
+						<ul>
+							<li>Pupi le lapin</li>
+							<li>Mr Baobab</li>
+							<li>Kaiwii</li>
+							<li>Perceval.eu</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</div>
 </body>
 </html>
