Ajout de mon style css sur sur la partie header de mon site

--- a/FirstProject/index.html
+++ b/FirstProject/index.html
@@ -20,17 +20,20 @@
 
 			<nav>
 				<ul>
-					<li>Acceuil</li>
-					<li>blog</li>
-					<li>CV</li>
-					<li>contact</li>
+					<li><a href="#">Acceuil</a></li>
+					<li><a href="#">blog</a></li>
+					<li><a href="#">CV</a></li>
+					<li><a href="#">contact</a></li>
 				</ul>
 			</nav>
 		</header>
 
+		<!-- séparteur -->
+		<div class="separateur"><img src="images/separateur.png"></div>
+
 		<div class="banner">
 			<img src="images/sanfrancisco.jpg">
-			<div>
+			<div class="banner-card">
 				<p>Retour sur mes vacances aux Etats-Unis...</p>
 				<a href="#">Voir l'article<i class="fa fa-caret-right"></i></a>
 			</div>
@@ -40,7 +43,7 @@
 			<aside>
 				<p>
 					<img src="images/ico_epingle.png">
-					<h2>Je suis un grand voyageur</h2>
+					<span>Je suis un grand voyageur</span>
 				</p>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
