Ajout du style css

--- a/FirstProject/index.html
+++ b/FirstProject/index.html
@@ -40,7 +40,7 @@
 		</div>
 
 		<section>
-			<aside>
+			<aside class="aside-left">
 				<p>
 					<img src="images/ico_epingle.png">
 					<span>Je suis un grand voyageur</span>
@@ -70,9 +70,10 @@
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
 			</aside>
-			<aside>
+			<aside class="aside-right">
 				<img src="images/bulle.png">
 				<div class="desc-auteur">
+					<span>A propos de l'auteur</span>
 					<img src="images/zozor_classe.png">
 					<p>Laisse moi le temps de me présenter: je m'appelle Zozor. Je suis né un 23 Novembre 2003.</p>
 					<p>
@@ -80,19 +81,19 @@
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 						quis nostrud exercitation ullamco.
 					</p>
-				</div>
-				<div class="reseaux-socials">
-					<img src="images/facebook.png">
-					<img src="images/twitter.png">
-					<img src="images/vimeo.png">
-					<img src="images/flickr.png">
-					<img src="images/rss.png">
+					<div class="reseaux-socials">
+						<img src="images/facebook.png">
+						<img src="images/twitter.png">
+						<img src="images/vimeo.png">
+						<img src="images/flickr.png">
+						<img src="images/rss.png">
+					</div>
 				</div>
 			</aside>
 		</section>
 
 		<!-- séparteur -->
-		<div class="separateur"></div>
+		<div class="separateur"><img src="images/separateur.png"></div>
 
 		<!-- Mon footer -->
 		<footer>
@@ -104,6 +105,7 @@
 					<p>le 12 mai à 22h 12</p>
 				</div>
 				<div class="photo">
+					<h4>Mes Photo</h4>
 					<img src="images/photo1.jpg">
 					<img src="images/photo2.jpg">
 					<img src="images/photo3.jpg">
@@ -118,8 +120,6 @@
 							<li>Kaiwii</li>
 							<li>Perceval.eu</li>
 						</ul>
-					</div>
-					<div>
 						<ul>
 							<li>Pupi le lapin</li>
 							<li>Mr Baobab</li>
