--- a/FirstProject/index.html
+++ b/FirstProject/index.html
@@ -12,7 +12,7 @@
 		<header>
 			<div class="logo">
 				<img src="images/zozor_logo.png">
-				<h1>Lozor</h1>
+				<h1>Zozor</h1>
 				<p>Carnet de voyage</p>
 			</div>
 
