--- a/variablesJS/index.html
+++ b/variablesJS/index.html
@@ -16,6 +16,27 @@
 	  <p id="seconds"></p>
  	</div>
 
+ 	<div class="series-frame">
+	  <h2>The Story of Tau</h2>
+	  <p id="episode-info"></p>
+	</div>
+
+	<!-- section class -->
+	<div class="series-frame-class">  
+	  <h2>The Story of Tau</h2>
+	  <p id="first-episode-info"></p>
+	</div>
+
+	<div class="series-frame-class">
+	  <h2>The Story of Tau</h2>
+	  <p id="second-episode-info"></p>
+	</div>
+
+	<div class="series-frame-class">
+	  <h2>The Story of Tau</h2>
+	  <p id="third-episode-info"></p>
+	</div>
+
  	<script src="script.js"></script>
 </body>
 </html>
