Les conditions en JavaScript

--- a/variablesJS/index.html
+++ b/variablesJS/index.html
@@ -37,6 +37,12 @@
 	  <p id="third-episode-info"></p>
 	</div>
 
+	<!-- Les conditions en javaScript -->
+	<h1>Quel est votre age?</h1>
+	<input id="age" type="text" placeholder="entrez votre age">
+	<input id="bouton" type="button" value="confirmer">
+	<h2 id="message"></h2>
+
  	<script src="script.js"></script>
 </body>
 </html>
