--- a/variablesJS/index.html
+++ b/variablesJS/index.html
@@ -44,5 +44,14 @@
 	<h2 id="message"></h2>
 
  	<script src="script.js"></script>
+
+ 	<!-- <h1>Quel est votre age?</h1>
+	<div id="control">
+	  <input type="checkbox" id="parental" name="parental" checked>
+	  <label for="parental">Contrôle parental activé</label>
+	</div>
+	<input id="age" type="text" placeholder="entrez votre age">
+	<input id="bouton" type="button" value="confirmer">
+	<h2 id="message"></h2> -->
 </body>
 </html>
