--- a/variablesJS/index.html
+++ b/variablesJS/index.html
@@ -53,5 +53,19 @@
 	<input id="age" type="text" placeholder="entrez votre age">
 	<input id="bouton" type="button" value="confirmer">
 	<h2 id="message"></h2> -->
+
+	<!-- Les fonctions -->
+	<div class="series-frame">
+	  <h2>The Story of Tau</h2>
+	  <p id="tau-info">Average rating: <span id="tau-score"></span></p>
+	</div>
+	<div class="series-frame">
+	  <h2>The Hero of Old Meldrum</h2>
+	  <p id="colin-info">Average rating: <span id="colin-score"></span></p>
+	</div>
+	<div class="series-frame">
+	  <h2>The Bugs of Isla Clara</h2>
+	  <p id="clara-info">Average rating: <span id="clara-score"></span></p>
+	</div>
 </body>
 </html>
