Les methodes d'instances

--- a/variablesJS/index.html
+++ b/variablesJS/index.html
@@ -67,5 +67,10 @@
 	  <h2>The Bugs of Isla Clara</h2>
 	  <p id="clara-info">Average rating: <span id="clara-score"></span></p>
 	</div>
+
+
+	<!-- Les methodes d'instances -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+	<button id="refresh">Check ratings</button>
 </body>
 </html>
