Mise à jour de ma barre de navigation

--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -9,10 +9,10 @@
 	<nav>
 		<h1>Mon Site</h1>
 		<ul>
-			<li>acceuil</li>
-			<li>services</li>
-			<li>produits</li>
-			<li>contacts</li>
+			<li><a href="#">acceuil</a></li>
+			<li><a href="#">services</a></li>
+			<li><a href="#">produits</a></li>
+			<li><a href="#">contacts</a></li>
 		</ul>
 	</nav>
 
