Style de mon titre

--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<nav>
-		<h1>Mon Site</h1>
+		<h1><span>M</span>on <span>S</span>ite</h1>
 		<ul>
 			<li><a href="#">acceuil</a></li>
 			<li><a href="#">services</a></li>
