Reorganisation de mon footer

--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -17,7 +17,8 @@
 	</nav>
 
 	<header>
-		<h1 id="titre">Location de Voitures<button id="btn">cliquer</button></h1>
+		<h1 id="titre">Location de Voitures</h1>
+		<button id="btn">cliquer</button>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
