Modification de mon header ajout de l'element em

--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>my app</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="themify-icons/themify-icons.css">
 </head>
 <body>
 	<nav>
@@ -17,8 +18,9 @@
 	</nav>
 
 	<header>
-		<h1 id="titre">Location de Voitures</h1>
-		<button id="btn">cliquer</button>
+		<button id="btn"><i class="ti-download"></i> Télécharger mon cv</button>
+		<em>Développeur Web Mobile Junior</em>
+		<h1 id="titre">Salut c'est moi Mamadou Faye</h1>
 		<img src="images/1.jpg">
 	</header>
 
