Font-size de mon grand titre 35px

--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>my app</title>
+	<title>PortFolio</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="themify-icons/themify-icons.css">
 </head>
