--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -24,6 +24,62 @@
 		<img src="images/1.jpg">
 	</header>
 
+	<section class="section-comp">
+		<h1>Mes Compétences</h1>
+		<table class="table-comp">
+			<tr>
+                <td>
+                    <span id="ans">HTML 70%</span><br/>
+                    <span class="gris"></span><span class="blanc"></span>
+                </td>
+                <td>
+                    <span id="ans">CSS 70%</span><br/>
+                    <span class="gris1"></span><span class="blanc1"></span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <span id="ans">JavaScript 50%</span><br/>
+                    <span class="gris2"></span><span class="blanc2"></span>
+                </td>
+                <td>
+                    <span id="ans">Angular 40%</span><br/>
+                    <span class="gris3"></span><span class="blanc3"></span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <span id="ans">Bootstrap 70%</span><br/>
+                    <span class="gris4"></span><span class="blanc4"></span>
+                </td>
+                <td>
+                    <span id="ans">PHP 60%</span><br/>
+                    <span class="gris5"></span><span class="blanc5"></span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <span id="ans">Laravel 40%</span><br/>
+                    <span class="gris6"></span><span class="blanc6"></span>
+                </td>
+                <td>
+                    <span id="ans">NodeJs 30%</span><br/>
+                    <span class="gris7"></span><span class="blanc7"></span>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <span id="ans">MySQL 60%</span><br/>
+                    <span class="gris8"></span><span class="blanc8"></span>
+                </td>
+                <td>
+                    <span id="ans">Java 40%</span><br/>
+                    <span class="gris9"></span><span class="blanc9"></span>
+                </td>
+            </tr>
+		</table>
+	</section>
+
 	<h1 id="text"></h1>
 
 	<script src="script.js"></script>
