--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -10,9 +10,10 @@
 	<nav>
 		<h1><span>M</span>on <span>S</span>ite</h1>
 		<ul>
-			<li><a href="#">acceuil</a></li>
-			<li><a href="#">services</a></li>
-			<li><a href="#">produits</a></li>
+			<li><a href="#">a-propos</a></li>
+			<li><a href="#">compétences</a></li>
+			<li><a href="#">certifications</a></li>
+            <li><a href="#">portfolio</a></li>
 			<li><a href="#">contacts</a></li>
 		</ul>
 	</nav>
