Lien des menu a-propos et competences

--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -10,22 +10,22 @@
 	<nav>
 		<h1><span>M</span>on <span>S</span>ite</h1>
 		<ul>
-			<li><a href="#">a-propos</a></li>
-			<li><a href="#">compétences</a></li>
+			<li><a href="#a-propos">a-propos</a></li>
+			<li><a href="#comp">compétences</a></li>
 			<li><a href="#">certifications</a></li>
             <li><a href="#">portfolio</a></li>
 			<li><a href="#">contacts</a></li>
 		</ul>
 	</nav>
 
-	<header>
+	<header id="a-propos">
 		<button id="btn"><i class="ti-download"></i> Télécharger mon cv</button>
 		<em>Développeur Web Mobile Junior</em>
 		<h1 id="titre">Salut c'est moi Mamadou Faye</h1>
 		<img src="images/1.jpg">
 	</header>
 
-	<section class="section-comp">
+	<section class="section-comp" id="comp">
 		<h1>Mes Compétences</h1>
 		<table class="table-comp">
 			<tr>
