--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -81,6 +81,113 @@
 		</table>
 	</section>
 
+     <!-- Section de Mes formations -->
+    <section class="mesFormations" id="forms">
+        <div class="container">
+            <!-- <div class="row">
+                
+                <div class="col-sm-3"></div>
+                <div class="col-sm-6">
+                    <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#mycarousel" data-slide-to="1"></li>
+                            <li data-target="#mycarousel" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img src="img/2.jpg" alt="UVS" style="width:100%; height:100%;">
+                            </div>
+                            <div class="item">
+                                <img src="img/3.jpg" alt="Orange" style="width:100%; height:100%;">
+                            </div>
+                            <div class="item">
+                                <img src="img/4.jpg" alt="fleur" style="width:100%; height:100%;">
+                            </div>
+                             <div class="item">
+                                <img src="img/televiseur.jpg" alt="léléviseur" style="width:100%; height:100%">
+                            </div> -->
+                       <!--  </div>
+                        <a class="left carousel-control" href="#mycarousel" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#mycarousel" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-sm-3"></div>
+            </div> -->
+        </div><br/><br/><br/><br/> 
+            <!-- Ma Formation -->
+        <div class="container" id="formations">
+            <h1>Formations</h1>
+            <div>         
+                <input class="form-control" id="myInput" type="text" placeholder="Search..." >
+            
+                    <div class="text-capitalize">
+                        <h6><a id="btnform" href="#forms">formtions</a> | <a id="btncertif" href="https://openclassrooms.com/fr/course-certificates/2183303035">certifications</a></h6>
+                    </div>
+                    <table class="table" id="myTable">
+                        <tr>
+                            <th><strong>Année debut</strong></th>
+                            <th><strong>Année fin</strong></th>
+                            <th><strong>Niveau</strong></th>
+                            <th><strong>Nom formation</strong></th>
+                            <th><strong>Nom institut ou université</strong></th>
+                        </tr>
+                        <tr>
+                            <td>2020</td>
+                            <td>2021</td>
+                            <td>L3</td>
+                            <td>Licence 3 Informatique Développement d'Application</td>
+                            <td>Université Virtuelle du Sénégal</td>
+                        </tr>
+                        <tr>
+                            <td>2019</td>
+                            <td>2020</td>
+                            <td>L2</td>
+                            <td>Licence 2 Informatique développement d'Application</td>
+                            <td>Université Virtuelle du Sénégal</td>
+                        </tr>
+                        <tr>
+                            <td>2018</td>
+                            <td>2019</td>
+                            <td>L1</td>
+                            <td>Licence 1 Informatique Développement d'Application</td>
+                            <td>Université Virtuelle du Sénégal</td>
+                        </tr>
+                    </table>
+
+                    <!-- Ma section  formation en responsive moyenne max-width:680px -->
+                    <div class="formation">
+                        <span><b>2020-2021</b>: Licence 3</span>
+                        <ul>
+                            <li>Informatique Développement d'Application</li>
+                            <li>Université Virtuelle du Sénégal</li>
+                        </ul>
+                        <span><b>2029-2020</b>: Licence 2</span>
+                        <ul>
+                            <li> Informatique Développement d'Application</li>
+                            <li>Université Virtuelle du Sénégal</li>
+                        </ul>
+                        <span><b>2018-2019</b>:  Licence 1</span>
+                        <ul>
+                            <li>Informatique Développement d'Application</li>
+                            <li>Université Virtuelle du Sénégal</li>
+                        </ul>
+                        <span><b>2017-2018</b>:  Baccalauréat</span>
+                        <ul>
+                            <li>Série L2</li>
+                            <li>Lycée de Nugéniène</li>
+                        </ul>
+                    </div>
+            </div>  
+        </div><br/><br/>
+    </section><br/><br/>
+
 	<h1 id="text"></h1>
 
 	<script src="script.js"></script>
