Mise en place de mon header

--- a/myVitrine/index.html
+++ b/myVitrine/index.html
@@ -17,7 +17,7 @@
 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 				consequat.
 			</p>
-			<a href="#">Our Menu</a>
+			<a class="btn" href="#">Our Menu</a>
 		</div>
 	</section>
 
