--- a/myVitrine/index.html
+++ b/myVitrine/index.html
@@ -7,7 +7,16 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+	<header>
+		<a href="#" class="logo"><span>A</span>gence</a>
+		<ul class="navigation">
+			<li><a href="#">Accueil</a></li>
+			<li><a href="#">A-propos</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Réalisations</a></li>
+			<li><a href="#">Contacts</a></li>
+		</ul>
+	</header>
 	<section class="banner" id="banner">
 		<div class="content">
 			<h2>Always Choose Good</h2>
@@ -21,5 +30,11 @@
 		</div>
 	</section>
 
+	<script type="text/javascript">
+		window.addEventListener('scroll', function (){
+			const header = document.querySelector('header');
+			header.classList.toggle("sticky", window.scrollY > 0);
+		});
+	</script>
 </body>
 </html>
