--- a/myVitrine/index.html
+++ b/myVitrine/index.html
@@ -10,7 +10,7 @@
 	<header>
 		<a href="#" class="logo"><span>A</span>gence</a>
 		<ul class="navigation">
-			<li><a href="#">Accueil</a></li>
+			<li><a href="#banner">Accueil</a></li>
 			<li><a href="#">A-propos</a></li>
 			<li><a href="#">Services</a></li>
 			<li><a href="#">Réalisations</a></li>
