--- a/myVitrine/index.html
+++ b/myVitrine/index.html
@@ -11,10 +11,10 @@
 		<a href="#" class="logo"><span>A</span>gence</a>
 		<ul class="navigation">
 			<li><a href="#banner">Accueil</a></li>
-			<li><a href="#">A-propos</a></li>
-			<li><a href="#">Services</a></li>
-			<li><a href="#">Réalisations</a></li>
-			<li><a href="#">Contacts</a></li>
+			<li><a href="#a-propos">A-propos</a></li>
+			<li><a href="#service">Services</a></li>
+			<li><a href="#projet">Réalisations</a></li>
+			<li><a href="#contact">Contacts</a></li>
 		</ul>
 	</header>
 	<section class="banner" id="banner">
@@ -27,6 +27,31 @@
 				consequat.
 			</p>
 			<a class="btn" href="#">Our Menu</a>
+		</div>
+	</section>
+
+	<section class="a-propos" id="a-propos">
+		<div class="row">
+			<div class="col50">
+				<h2 class="titileText"><span>A</span> propos de Nous</h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat.
+				</p>
+			</div>
+			<div class="col50">
+				<div class="imgBx">
+					<img src="images/1.jpg">
+				</div>
+			</div>
 		</div>
 	</section>
 
