Initialisation de la partie services

--- a/myVitrine/index.html
+++ b/myVitrine/index.html
@@ -55,6 +55,10 @@
 		</div>
 	</section>
 
+	<section class="service" id="service">
+		
+	</section>
+
 	<script type="text/javascript">
 		window.addEventListener('scroll', function (){
 			const header = document.querySelector('header');
