Ajout de mon grand titre de la section services

--- a/myVitrine/index.html
+++ b/myVitrine/index.html
@@ -56,7 +56,11 @@
 	</section>
 
 	<section class="service" id="service">
-		
+		<div class="title">
+			<div class="titileText">
+				<h2><span>S</span>ervices</h2>
+			</div>
+		</div>
 	</section>
 
 	<script type="text/javascript">
