Ajout de mon paragraphe de la section des services

--- a/myVitrine/index.html
+++ b/myVitrine/index.html
@@ -59,6 +59,7 @@
 		<div class="title">
 			<div class="titileText">
 				<h2><span>S</span>ervices</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 			</div>
 		</div>
 	</section>
