--- a/myVitrine/index.html
+++ b/myVitrine/index.html
@@ -62,6 +62,13 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
 			</div>
 		</div>
+		<div class="content">
+			<div class="box">
+				<div class="imgBx">
+					<img src="images/">
+				</div>
+			</div>
+		</div>
 	</section>
 
 	<script type="text/javascript">
