--- a/myVitrine/index.html
+++ b/myVitrine/index.html
@@ -65,7 +65,26 @@
 		<div class="content">
 			<div class="box">
 				<div class="imgBx">
-					<img src="images/">
+					<img src="images/img1.jpg">
+				</div>
+				<div class="text">
+					<h3>Spécial chassure</h3>
+				</div>
+			</div>
+			<div class="box">
+				<div class="imgBx">
+					<img src="images/img2.jpg">
+				</div>
+				<div class="text">
+					<h3>Spécial caméra</h3>
+				</div>
+			</div>
+			<div class="box">
+				<div class="imgBx">
+					<img src="images/img3.jpg">
+				</div>
+				<div class="text">
+					<h3>Spécial souris</h3>
 				</div>
 			</div>
 		</div>
