Ajout encore des images dans la section des services

--- a/myVitrine/index.html
+++ b/myVitrine/index.html
@@ -87,6 +87,30 @@
 					<h3>Spécial souris</h3>
 				</div>
 			</div>
+			<div class="box">
+				<div class="imgBx">
+					<img src="images/img16.jpg">
+				</div>
+				<div class="text">
+					<h3>Spécial chassure</h3>
+				</div>
+			</div>
+			<div class="box">
+				<div class="imgBx">
+					<img src="images/img4.jpg">
+				</div>
+				<div class="text">
+					<h3>Spécial caméra</h3>
+				</div>
+			</div>
+			<div class="box">
+				<div class="imgBx">
+					<img src="images/img1.jpg">
+				</div>
+				<div class="text">
+					<h3>Spécial souris</h3>
+				</div>
+			</div>
 		</div>
 	</section>
 
