Style css de la section services

--- a/myVitrine/index.html
+++ b/myVitrine/index.html
@@ -57,10 +57,8 @@
 
 	<section class="service" id="service">
 		<div class="title">
-			<div class="titileText">
-				<h2><span>S</span>ervices</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-			</div>
+			<h2 class="titleText">Nos <span>S</span>ervices</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
 		</div>
 		<div class="content">
 			<div class="box">
@@ -110,6 +108,9 @@
 				<div class="text">
 					<h3>Spécial souris</h3>
 				</div>
+			</div>
+			<div class="title">
+				<a href="#" class="btn">View All</a>
 			</div>
 		</div>
 	</section>
