--- a/myVitrine/index.html
+++ b/myVitrine/index.html
@@ -115,6 +115,47 @@
 		</div>
 	</section>
 
+	<section class="expert" id="projet">
+		<div class="title">
+			<h2 class="titleText">Nos <span>E</span>xpert</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+		</div>
+		<div class="content">
+			<div class="box">
+				<div class="imgBx">
+					<img src="images/1.jpg">
+				</div>
+				<div class="text">
+					<h3>Someone famous</h3>
+				</div>
+			</div>
+			<div class="box">
+				<div class="imgBx">
+					<img src="images/2.jpg">
+				</div>
+				<div class="text">
+					<h3>Someone famous</h3>
+				</div>
+			</div>
+			<div class="box">
+				<div class="imgBx">
+					<img src="images/3.jpg">
+				</div>
+				<div class="text">
+					<h3>Someone famous</h3>
+				</div>
+			</div>
+			<div class="box">
+				<div class="imgBx">
+					<img src="images/1.jpg">
+				</div>
+				<div class="text">
+					<h3>Someone famous</h3>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<script type="text/javascript">
 		window.addEventListener('scroll', function (){
 			const header = document.querySelector('header');
