Ajout de la class sticky javaScript pour changer le background et la position ddu menu de navigation lors de l'scroll

--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -191,5 +191,11 @@
 	<h1 id="text"></h1>
 
 	<script src="script.js"></script>
+    <script type="text/javascript">
+        window.addEventListener('scroll', function () {
+            const header = document.querySelector('nav');
+            header.classList.toggle('sticky', window.scrollY > 0);
+        });
+    </script>
 </body>
 </html>
