Changement du bouton de telechargement en lien

--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -19,7 +19,7 @@
 	</nav>
 
 	<header id="a-propos">
-		<button id="btn"><i class="ti-download"></i> Télécharger mon cv</button>
+		<a class="btn" id="btn"><i class="ti-download"></i> Télécharger mon cv</a>
 		<em>Développeur Web Mobile Junior</em>
 		<h1 id="titre">Salut c'est moi Mamadou Faye</h1>
 		<img src="images/1.jpg">
