Ajout de function de debeggage

--- a/variablesJS/index.function.debegger.html
+++ b/variablesJS/index.function.debegger.html
@@ -5,7 +5,10 @@
 	<title>debeggage</title>
 </head>
 <body>
-
+	<h1>Convertir les années en mois</h1>
+	<input id="annee" type="text" placeholder="entrez nombre d'années">
+	<input id="bouton" type="button" value="Convertir">
+	<h2 id="message"></h2>
 <script src="script.function.debegger.js"></script>
 </body>
 </html>
