--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -11,7 +11,7 @@
 		<h1><span>M</span>on <span>S</span>ite</h1>
 		<ul>
 			<li><a href="#a-propos">a-propos</a></li>
-			<li><a href="#comp">compétences</a></li>
+			<li><a href="#comp" id="btncomp">compétences</a></li>
 			<li><a href="#">certifications</a></li>
             <li><a href="#">portfolio</a></li>
 			<li><a href="#">contacts</a></li>
@@ -195,6 +195,13 @@
         window.addEventListener('scroll', function () {
             const header = document.querySelector('nav');
             header.classList.toggle('sticky', window.scrollY > 0);
+        });
+    </script>
+    <script type="text/javascript">
+        const navcomp = document.getElementById('btncomp');
+        const competences = document.getElementById('comp');
+        navcomp.addEventListener('click', function () {
+            competences.style.Top = 5 + "rem";
         });
     </script>
 </body>
