--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<nav>
-		<h1><span>M</span>on <span>S</span>ite</h1>
+		<h1><span>W</span>eb<span>S</span>ite</h1>
 		<ul>
 			<li><a href="#a-propos">a-propos</a></li>
 			<li><a href="#comp" id="btncomp">compétences</a></li>
