Modification de la colone nom formation de la section formation

--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -142,21 +142,21 @@
                             <td>2020</td>
                             <td>2021</td>
                             <td>L3</td>
-                            <td>Licence 3 Informatique Développement d'Application</td>
+                            <td>Informatique Développement d'Application</td>
                             <td>Université Virtuelle du Sénégal</td>
                         </tr>
                         <tr>
                             <td>2019</td>
                             <td>2020</td>
                             <td>L2</td>
-                            <td>Licence 2 Informatique développement d'Application</td>
+                            <td>Informatique développement d'Application</td>
                             <td>Université Virtuelle du Sénégal</td>
                         </tr>
                         <tr>
                             <td>2018</td>
                             <td>2019</td>
                             <td>L1</td>
-                            <td>Licence 1 Informatique Développement d'Application</td>
+                            <td>Informatique Développement d'Application</td>
                             <td>Université Virtuelle du Sénégal</td>
                         </tr>
                     </table>
