forms identifiants link

--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -12,7 +12,7 @@
 		<ul>
 			<li><a href="#a-propos">a-propos</a></li>
 			<li><a href="#comp" id="btncomp">compétences</a></li>
-			<li><a href="#">certifications</a></li>
+			<li><a href="#forms">certifications</a></li>
             <li><a href="#">portfolio</a></li>
 			<li><a href="#">contacts</a></li>
 		</ul>
