--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -188,6 +188,66 @@
         </div><br/><br/>
     </section><br/><br/>
 
+    <section class="service" id="service">
+        <div class="title">
+            <h2 class="titleText">Nos <span>S</span>ervices</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+        </div>
+        <div class="content">
+            <div class="box">
+                <div class="imgBx">
+                    <img src="images/img1.jpg">
+                </div>
+                <div class="text">
+                    <h3>Spécial chassure</h3>
+                </div>
+            </div>
+            <div class="box">
+                <div class="imgBx">
+                    <img src="images/img2.jpg">
+                </div>
+                <div class="text">
+                    <h3>Spécial caméra</h3>
+                </div>
+            </div>
+            <div class="box">
+                <div class="imgBx">
+                    <img src="images/img3.jpg">
+                </div>
+                <div class="text">
+                    <h3>Spécial souris</h3>
+                </div>
+            </div>
+            <div class="box">
+                <div class="imgBx">
+                    <img src="images/img16.jpg">
+                </div>
+                <div class="text">
+                    <h3>Spécial chassure</h3>
+                </div>
+            </div>
+            <div class="box">
+                <div class="imgBx">
+                    <img src="images/img4.jpg">
+                </div>
+                <div class="text">
+                    <h3>Spécial caméra</h3>
+                </div>
+            </div>
+            <div class="box">
+                <div class="imgBx">
+                    <img src="images/img1.jpg">
+                </div>
+                <div class="text">
+                    <h3>Spécial souris</h3>
+                </div>
+            </div>
+            <div class="title">
+                <a href="#" class="btn">View All</a>
+            </div>
+        </div>
+    </section>
+
 	<h1 id="text"></h1>
 
 	<script src="script.js"></script>
