--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -190,13 +190,13 @@
 
     <section class="service" id="service">
         <div class="title">
-            <h2 class="titleText">Nos <span>S</span>ervices</h2>
+            <h2 class="titleText"><span>P</span>ortFolio</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
         </div>
         <div class="content">
             <div class="box">
                 <div class="imgBx">
-                    <img src="images/img1.jpg">
+                    <img src="images/1.png">
                 </div>
                 <div class="text">
                     <h3>Spécial chassure</h3>
@@ -204,7 +204,7 @@
             </div>
             <div class="box">
                 <div class="imgBx">
-                    <img src="images/img2.jpg">
+                    <img src="images/2.png">
                 </div>
                 <div class="text">
                     <h3>Spécial caméra</h3>
@@ -212,7 +212,7 @@
             </div>
             <div class="box">
                 <div class="imgBx">
-                    <img src="images/img3.jpg">
+                    <img src="images/2.jpeg">
                 </div>
                 <div class="text">
                     <h3>Spécial souris</h3>
