--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -13,7 +13,7 @@
 			<li><a href="#a-propos">a-propos</a></li>
 			<li><a href="#comp" id="btncomp">compétences</a></li>
 			<li><a href="#forms">certifications</a></li>
-            <li><a href="#">portfolio</a></li>
+            <li><a href="#service">portfolio</a></li>
 			<li><a href="#">contacts</a></li>
 		</ul>
 	</nav>
