--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -22,7 +22,7 @@
 		<a class="btn" id="btn"><i class="ti-download"></i> Télécharger mon cv</a>
 		<em>Développeur Web Mobile Junior</em>
 		<h1 id="titre">Salut c'est moi Mamadou Faye</h1>
-		<img src="images/1.jpg">
+		<img src="images/jule.jpg">
 	</header>
 
 	<section class="section-comp" id="comp">
