Commentaire de mon portfolio

--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -248,7 +248,7 @@
         </div>
     </section>
 
-    <section class="portfolio" id="portfolio">
+    <!-- <section class="portfolio" id="portfolio">
                 
         <header class="header-portfolio">
             <h2>portfolio</h2>
@@ -269,7 +269,7 @@
             </div>
         </div>
 
-    </section>
+    </section> -->
 
 	<h1 id="text"></h1>
 
