<li><a href=#>Petit prince</a></li>

--- a/FirstProject/correction.html
+++ b/FirstProject/correction.html
@@ -73,7 +73,7 @@
                         <ul>
                             <li><a href="#">Belette</a></li>
                             <li><a href="#">Le concombre masqué</a></li>
-                            <li><a href="#">Ptit prince</a></li>
+                            <li><a href="#">Petit prince</a></li>
                             <li><a href="#">Mr Fan</a></li>
                         </ul>
                     </div>
