--- a/variablesJS/js/index.html
+++ b/variablesJS/js/index.html
@@ -250,7 +250,25 @@
 
 	<h1 id="text"></h1>
 
-    
+    <!-- Ma partie contacts -->
+    <section class="contact" id="contacts">
+        <h1>Contactez Nous</h1>
+        <form class="form-contact" action="contact.php" method="post">
+            <p>
+                <input type="text" name="login" placeholder="Votre nom">
+            </p>
+            <p>
+                <input type="email" name="email" placeholder="Votre email">
+            </p>
+            <p>
+                <input type="text" name="telephone" placeholder="Votre numéro">
+            </p>
+            <p>
+                <textarea name="message" placeholder="Votre message"></textarea>
+            </p>
+            <span><input type="submit" name="btnSubmit" value="Envoyer"></span>
+        </form>
+    </section>
 
 	<script src="script.js"></script>
     <script type="text/javascript">
